sandia to sunward

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
           focus on what matters most for each organization, in both the present
           and future, by leveraging design thinking principles. <br /><br />
           Most recently, I have had the privilege of working with a fantastic
-          leadership team at Think|Stack and at Sandia Laboratory FCU. A pivotal
-          person on the Think|Stack team and in my career has been Chris Sachse,
-          CEO at Think|Stack. Chris is a forward thinker when it comes to
-          innovation in business, design thinking, and putting people first.
-          I've learned a lot about how to be a better leader through Chris.
+          leadership team at Think|Stack and at Sunward. A pivotal person on the
+          Think|Stack team and in my career has been Chris Sachse, CEO at
+          Think|Stack. Chris is a forward thinker when it comes to innovation in
+          business, design thinking, and putting people first. I've learned a
+          lot about how to be a better leader through Chris.
           <br /><br />
           You'll find that I enjoy amping up my team both behind the scenes and
           publicly. Whether that be taking the time to explore the team's
