simplification of a single year

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </p>
         </div>
         <div class="experience-content">
-          <h4 class="experience-date-header">2023 - 2023</h4>
+          <h4 class="experience-date-header">2023</h4>
           <p class="experience-title">Sr Director of Strategic Technology</p>
           <p class="experience-company">Govplace</p>
           <p class="experience-summary">
