--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
           focus on what matters most for each organization, in both the present
           and future, by leveraging design thinking principles. <br /><br />
           Most recently, I have had the privilege of working with a fantastic
-          leadership team at Think|Stack and at Sandia Laboratory FCU. A pivotal
-          person on the Think|Stack team and in my career has been Chris Sachse,
-          CEO at Think|Stack. Chris is a forward thinker when it comes to
-          innovation in business, design thinking, and putting people first.
-          I've learned a lot about how to be a better leader through Chris.
+          leadership team at Think|Stack and at Sunward. A pivotal person on the
+          Think|Stack team and in my career has been Chris Sachse, CEO at
+          Think|Stack. Chris is a forward thinker when it comes to innovation in
+          business, design thinking, and putting people first. I've learned a
+          lot about how to be a better leader through Chris.
           <br /><br />
           You'll find that I enjoy amping up my team both behind the scenes and
           publicly. Whether that be taking the time to explore the team's
@@ -194,11 +194,9 @@
       </div>
       <div class="timeline-container" id="experience">
         <div class="experience-content">
-          <h4 class="experience-date-header">April 2024 - Present</h4>
+          <h4 class="experience-date-header">2024 - Present</h4>
           <p class="experience-title">SVP, Technology</p>
-          <p class="experience-company">
-            Sunward, formerly Sandia Laboratory FCU
-          </p>
+          <p class="experience-company">Sunward</p>
           <p class="experience-summary">
             Technology visionary, strategist, and leader. My role oversees
             technology and cybersecurity within the organization. My goal is to
@@ -209,11 +207,9 @@
           </p>
         </div>
         <div class="experience-content">
-          <h4 class="experience-date-header">September 2023 - April 2024</h4>
+          <h4 class="experience-date-header">2023 - 2024</h4>
           <p class="experience-title">Interim Chief Technology Officer</p>
-          <p class="experience-company">
-            Sunward, formerly Sandia Laboratory FCU
-          </p>
+          <p class="experience-company">Sunward</p>
           <p class="experience-summary">
             Technology visionary, strategist, and leader. With a new leadership
             team, Sunward was going through a transition phase rebuilding their
@@ -223,7 +219,7 @@
           </p>
         </div>
         <div class="experience-content">
-          <h4 class="experience-date-header">April 2023 - Present</h4>
+          <h4 class="experience-date-header">2023 - Present</h4>
           <p class="experience-title">Founder</p>
           <p class="experience-company">Octo Ventures</p>
           <p class="experience-summary">
@@ -234,7 +230,7 @@
           </p>
         </div>
         <div class="experience-content">
-          <h4 class="experience-date-header">April 2023 - September 2023</h4>
+          <h4 class="experience-date-header">2023</h4>
           <p class="experience-title">Sr Director of Strategic Technology</p>
           <p class="experience-company">Govplace</p>
           <p class="experience-summary">
@@ -244,7 +240,7 @@
           </p>
         </div>
         <div class="experience-content">
-          <h4 class="experience-date-header">2018 - April 2023</h4>
+          <h4 class="experience-date-header">2018 - 2023</h4>
           <p class="experience-title">Chief Technology Officer</p>
           <p class="experience-company">Think|Stack</p>
           <p class="experience-summary">
