--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       </div>
       <div class="education-content" id="education">
         <ul>
-          <li>Stagen Executive Leadership Program | 2025</li>
+          <li>Stagen Leadership Program | 2025</li>
           <li>
             AWS Solutions Architect - Professional | 2025 &#38; 2022 &#38; 2019
           </li>
