Add section dividers to all pages
- Add .section-divider CSS class with teal accent color (#80cbc4)
- Insert dividers between sections on index.html (7 dividers)
- Insert dividers between sections on architecture.html (2 dividers)
- Insert dividers between sections on contact.html (2 dividers)
- Dividers use semi-transparent styling for subtle visual separation
- Responsive design works on all screen sizes

--- a/architecture.html
+++ b/architecture.html
@@ -81,6 +81,8 @@
       </div>
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Repository Links -->
     <div class="repository-links container">
       <div class="header">
@@ -111,6 +113,8 @@
         </div>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Topology -->
     <div class="container">
