--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,8 @@
       </div>
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Contact Me -->
     <div class="contact-me container">
       <div class="contact-me header">
@@ -87,6 +89,8 @@
         ></a>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Link Tree -->
     <div class="link-tree container">
