--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
       />
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Content-->
     <!-- About Me -->
     <div class="about-me container">
@@ -144,6 +146,8 @@
       />
     </div>
 
+    <hr class="section-divider" />
+
     <!-- My Technology Philosophy -->
     <div class="philosophy container">
       <div class="philosophy header">
@@ -186,6 +190,8 @@
         </p>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Experience -->
     <div class="experience container">
@@ -296,6 +302,8 @@
       </div>
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Highlights -->
     <div class="highlights container">
       <div class="highlights header">
@@ -384,6 +392,8 @@
       </div>
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Skills -->
     <div class="skills container">
       <div class="skills header">
@@ -465,6 +475,8 @@
       </div>
     </div>
 
+    <hr class="section-divider" />
+
     <!-- Education -->
     <div class="education container">
       <div class="education header">
@@ -491,6 +503,8 @@
         </ul>
       </div>
     </div>
+
+    <hr class="section-divider" />
 
     <!-- Photo Gallery -->
     <div class="gallery container">
