updates to achievements

--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
       </div>
       <div class="about-me content" id="about-me">
         <p>
-          My leadership style is that of a transformational leader. I have a
-          unique perspective on the interplay of technology and business from
-          both the breadth and depth of my body of work. That work spanned
-          varying organization sizes and industry types. I began working with my
-          previous two organizations while they were in the startup phase. Each
-          company was a managed service provider or MSP. While there, I worked
-          with established organizations ranging from 50+ employees to 6000+
-          employees. I've worked with enormous healthcare organizations, tiny
-          financial institutions, technology firms, hospitality organizations,
+          I am a transformational leader with a unique perspective on the
+          interplay of technology and business forged through the breadth and
+          depth of my body of work. That work spanned varying organization sizes
+          and industry types. I began working with my previous two organizations
+          while they were in the startup phase. Each company was a managed
+          service provider or MSP. While there, I worked with established
+          organizations ranging from 50+ employees to 6000+ employees. I've
+          worked with enormous healthcare organizations, tiny financial
+          institutions, technology firms, hospitality organizations,
           construction, and enormous financial institutions. This perspective
           has given me an understanding of the evolution an organization goes
           through in its lifetime. This experience has helped me to hone in and
@@ -312,7 +312,7 @@
       <div class="highlights content" id="highlights">
         <h4>Highlights</h4>
         <p>
-          It's difficult to cover the breadth and depth of my last 18 years in
+          It's difficult to cover the breadth and depth of my last 20 years in
           such a small snapshot. Instead, I'll try and cover some highlights
           which I'm especially proud of.
         </p>
@@ -356,7 +356,7 @@
           </li>
           <li>
             <p>
-              Led incident response and recovery for 7 major ransomware events,
+              Led incident response and recovery for 6 major ransomware events,
               including a major healthcare provider and major financial
               institution. Required migration of all services to the cloud in
               order to preserve forensics and speed recovery in parallel.
