--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 
     <hr class="section-divider" />
 
-    <!-- My Technology Philosophy -->
+    <!-- Technology Philosophy -->
     <div class="philosophy container">
       <div class="philosophy header">
-        <h3><span class="dot">.</span>My Technology Philosophy</h3>
+        <h3><span class="dot">.</span>Technology Philosophy</h3>
       </div>
       <div class="philosophy content" id="philosophy">
         <h4>Technology Should Simplify</h4>
@@ -304,92 +304,17 @@
 
     <hr class="section-divider" />
 
-    <!-- Highlights -->
-    <div class="highlights container">
-      <div class="highlights header">
-        <h3><span class="dot">.</span>Accolades &#38; Highlights</h3>
+    <!-- Achievements -->
+    <div class="achievements container">
+      <div class="achievements header">
+        <h3><span class="dot">.</span>Achievements</h3>
       </div>
-      <div class="highlights content" id="highlights">
-        <h4>Highlights</h4>
-        <p>
-          It's difficult to cover the breadth and depth of my last 20 years in
-          such a small snapshot. Instead, I'll try and cover some highlights
-          which I'm especially proud of.
-        </p>
-        <ul>
-          <li>
-            <p>
-              Oversaw a major acquisition and the largest Sunward had ever had.
-            </p>
-          </li>
-          <li>
-            <p>
-              Our team won a AWS 2022 &#38; 2021 NPO Partner Of The Year award.
-              I was pivotal in the vision, strategy, and execution of making
-              this come to be.
-            </p>
-          </li>
-          <li>
-            <p>
-              Architected scalable web application for major power company in
-              the United States. Required scaling from 10,000 concurrent users
-              on average to &#62;4 million concurrent users.
-            </p>
-          </li>
-          <li>
-            <p>
-              First organization and project to migrate &#62;90% of credit union
-              servers and core provider to AWS public cloud.
-            </p>
-          </li>
-          <li>
-            <p>
-              Built a cloud backup product SaaS platform utilizing python and
-              AWS serverless technology: Python, Lambda, SQS, and SNS.
-            </p>
-          </li>
-          <li>
-            <p>
-              Built out &#62;98% of all terraform modules, 50,000+ lines of
-              code, which are leveraged in projects and managed services
-            </p>
-          </li>
-          <li>
-            <p>
-              Led incident response and recovery for 6 major ransomware events,
-              including a major healthcare provider and major financial
-              institution. Required migration of all services to the cloud in
-              order to preserve forensics and speed recovery in parallel.
-            </p>
-          </li>
-          <li>
-            <p>
-              Led and participated in design thinking sessions with
-              organizations helping them to identify pain points, resolutions,
-              and revolutionize their whole business in a new trajectory.
-            </p>
-          </li>
-          <li>
-            <p>
-              Built the annual technology budget for 20+ financial intitutions
-              for many years.
-            </p>
-          </li>
-          <li>
-            <p>
-              Built the 1, 3, and 5 year technology strategy for 20+ financial
-              institutions for many years.
-            </p>
-          </li>
-          <li>
-            <p>
-              And most importantly, watched my team grow from individual young
-              engineers into a tight-knit team of strong senior engineers and
-              leaders.
-            </p>
-          </li>
-        </ul>
-      </div>
+      <img
+        src="./media/images/zachary_hill_infographic.png"
+        alt="Zachary Hill's professional achievements and accolades infographic."
+        id="achievements-infographic"
+        class="infographic"
+      />
     </div>
 
     <hr class="section-divider" />
@@ -480,7 +405,7 @@
     <!-- Education -->
     <div class="education container">
       <div class="education header">
-        <h3><span class="dot">.</span>Education &#38;<br />Certifications</h3>
+        <h3><span class="dot">.</span>Education</h3>
       </div>
       <div class="education-content" id="education">
         <ul>
