content adjustments and color tweaks

--- a/architecture.html
+++ b/architecture.html
@@ -69,14 +69,17 @@
       </div>
       <div class="content">
         <p>
-          This website was created using HTML and CSS entirely by me with a
-          little help from GitHub CoPilot. The website is hosted on AWS
-          utilizing Route53, CloudFront, and S3 services. The repositories for
-          the website and the cloud environment are hosted on GitHub. The cloud
-          environment was created and is maintained using terraform. The website
-          is automatically deployed with GitHub Actions workflows. The website
-          itself was built to be responsive and works on devices with all screen
-          dimensions.
+          This website was created using HTML and CSS by me with a little help
+          from GitHub Copilot. It embodies my
+          <a href="index.html#philosophy">Technology Philosophy</a>, by using
+          the simplest tool for the job which accomplishes the requirements or
+          goals. The website is hosted on AWS utilizing Route53, CloudFront, and
+          S3 services. The repositories for the website and the cloud
+          environment are hosted on GitHub. The cloud environment was created
+          and is maintained using Terraform. The website is automatically
+          deployed with GitHub Actions workflows. The selected tech stack
+          enables easy adjustments by me, quick deployment, negligible hosting
+          costs, and high availability.
         </p>
       </div>
     </div>
