--- a/index.html
+++ b/index.html
@@ -89,41 +89,34 @@
       </div>
       <div class="about-me content" id="about-me">
         <p>
-          I am a transformational leader with a unique perspective on the
-          interplay of technology and business forged through the breadth and
-          depth of my body of work. That work spanned varying organization sizes
-          and industry types. I began working with my previous two organizations
-          while they were in the startup phase. Each company was a managed
-          service provider or MSP. While there, I worked with established
-          organizations ranging from 50+ employees to 6000+ employees. I've
-          worked with enormous healthcare organizations, tiny financial
-          institutions, technology firms, hospitality organizations,
-          construction, and enormous financial institutions. This perspective
-          has given me an understanding of the evolution an organization goes
-          through in its lifetime. This experience has helped me to hone in and
-          focus on what matters most for each organization, in both the present
-          and future, by leveraging design thinking principles. <br /><br />
-          Most recently, I have had the privilege of working with a fantastic
-          leadership team at Think|Stack and at Sunward. A pivotal person on the
-          Think|Stack team and in my career has been Chris Sachse, CEO at
-          Think|Stack. Chris is a forward thinker when it comes to innovation in
-          business, design thinking, and putting people first. I've learned a
-          lot about how to be a better leader through Chris.
+          I am a transformational leader who believes that to be successful you
+          must build your teams through empathy and trust. I do so by giving my
+          team the 'why', autonomy, mastery, purpose, and leading from the
+          front.
           <br /><br />
-          You'll find that I enjoy amping up my team both behind the scenes and
-          publicly. Whether that be taking the time to explore the team's
-          hobbies with them, hosting a session of D&#38;D, an escape room happy
-          hour, or making sure our customers know the impact each individual
-          team member is having for them. I come from a history of playing team
-          sports. Sports taught me the value in lifting up those around you. The
-          power of confidence and positive thinking in any one member of a team
-          can spread like wildfire and allow for impressive feats, previously
-          thought impossible. In that same way, failure is something a team
-          bears the burden of together. A single play may have been what sticks
-          in one's memories, but it was the team that brought that play to be.
-          Even in that case, failure is merely a learning opportunity put forth
-          right in front of your eyes. A guidepost pointing you and the team
-          towards continuous improvement.
+          My unique perspective on the interplay of technology and business
+          comes from working with organizations of all sizes and growth stages.
+          These organizations have ranged from 10+ to 6000+ employees. I've seen
+          what great teams and technology look like over my 20 year career
+          throughout many industries. This experience has helped me to focus on
+          what matters most when building teams and technology.
+          <br /><br />
+          I get my own joy and purpose from working with leadership teams which
+          exhibit excellence in key qualities:<br />
+          - Willingness to be vulnerable and open<br />
+          - Eagerness for continuous improvement<br />
+          - A growth mindset<br />
+          - Collaboration and inclusivity<br />
+          <br />
+          I come from a history of playing team sports. Sports taught me the
+          value in lifting up those around you. The power of confidence and
+          positive thinking in any one member of a team can spread like wildfire
+          and allow for impressive feats, previously thought impossible. In that
+          same way, failure is something a team bears the burden of together. A
+          single play resulting in a loss may have been what sticks in one's
+          memories, but it was the team that brought that play to be. Failure is
+          merely a learning opportunity put forth right in front of your eyes. A
+          guidepost pointing you and the team towards continuous improvement.
           <br /><br />
           Interestingly, I'm just as comfortable delivering a presentation to a
           board as I am rolling up my sleeves writing code behind the scenes. I
@@ -132,7 +125,7 @@
           tablet, and unpacking the nitty gritty details of a technology. By
           putting a piece of technology within my hands I can turn it around and
           view it from all angles. Doing so helps me to understand how it can be
-          placed within a larger system.
+          placed within a larger cohesive system.
           <br /><br />
           In many ways I'm like a star in the galaxy. I naturally pull a strong
           team together around me. To me, the best experience is working with a
@@ -154,7 +147,7 @@
         <h3><span class="dot">.</span>Technology Philosophy</h3>
       </div>
       <div class="philosophy content" id="philosophy">
-        <h4>Technology Should Simplify</h4>
+        <h4>Simple</h4>
         <p>
           Technology should make our lives simpler, not harder. People follow
           the path of least resistance, and that means complexity or difficulty
@@ -162,31 +155,36 @@
           solves one problem but creates another. Utilize the right technology
           to create efficiency and simplicity.
         </p>
-        <h4>Transparent Engineering</h4>
+        <h4>Secure</h4>
+        <p>
+          Security must be so interwoven into technology that it is
+          indiscernible from the technology itself. It should be a cornerstone
+          for all design and architecture decisions. Security is not a feature
+          that can be added later; it must be built in from the start.
+        </p>
+        <h4>Transparent</h4>
         <p>
           Technology should be well-documented and communicated to describe how
           it works. The most utilized technologies are those which are plainly
           written, diagrammed, and described. Doing so allows others to use the
           technology as a building block.
         </p>
-        <h4>Security As A Foundation</h4>
+        <h4>Automated</h4>
         <p>
-          Security must be so interwoven into the technology that it is
-          indiscernible from the technology itself. It should be a cornerstone
-          of good technology and the foundation for everything thereafter.
-        </p>
-        <h4>Productivity Through Automation</h4>
-        <p>
-          Automation of the mundane and the boring solves problems and common
-          mistakes such as typos or entering data into the wrong field. It
-          allows people to focus on higher-level projects, innovation, and
-          growth.
+          If it isn't automated, it isn't true. We're all human, and any mundane
+          process is prone to error. Automation of the mundane and the boring
+          solves problems and common mistakes such as typos or entering data
+          into the wrong field. It allows people to focus on higher-level
+          projects, innovation, and growth.
         </p>
         <h4>Redundant and Resilient</h4>
         <p>
-          Technology should be built for failure. Failure can exist at every
-          level and when the design or engineering of a technology accounts for
-          failure that allows for continuity.
+          Technology should be scalable and built for failure. Scalability
+          considered both expansion and contraction. Failure can exist at any
+          layer and when the design of technology accounts for failure that
+          allows for continuity. It is the difference between stressful
+          firefighting and confidence in knowing the technology will work when
+          needed.
         </p>
       </div>
     </div>
@@ -201,13 +199,13 @@
       <div class="timeline-container" id="experience">
         <div class="experience-content">
           <h4 class="experience-date-header">2024 - Present</h4>
-          <p class="experience-title">SVP, Technology</p>
+          <p class="experience-title">Senior Vice President, Technology</p>
           <p class="experience-company">Sunward</p>
           <p class="experience-summary">
             Technology visionary, strategist, and leader. My role oversees
-            technology and cybersecurity within the organization. My goal is to
-            enable and protect the organization through technology by aligning
-            the technology to organizational goals. My team translates ideas and
+            technology and cybersecurity within the organization. I enable and
+            protect the organization through technology by aligning the
+            technology to organizational goals. My team translates ideas and
             goals into execution by bringing together the right people,
             processes, and technology.
           </p>
@@ -221,7 +219,7 @@
             team, Sunward was going through a transition phase rebuilding their
             culture and vision. My role was to rebuild the culture, stabalize
             the technology, and move into the modern era where technology
-            platforms enable the business.
+            platforms enabled business outcomes.
           </p>
         </div>
         <div class="experience-content">
@@ -229,10 +227,9 @@
           <p class="experience-title">Founder</p>
           <p class="experience-company">Octo Ventures</p>
           <p class="experience-summary">
-            I founded this company to explore technology contracts while my
-            partner and I traveled the country in our Airstream. This has been
-            my proof of concept testing grounds for new ideas and exploring new
-            directions.
+            I founded Octo Ventures to share my experience and knowledge with
+            other organizations. It's also where I explore, experiment, and
+            build new ideas.
           </p>
         </div>
         <div class="experience-content">
@@ -242,7 +239,9 @@
           <p class="experience-summary">
             An organization trying to reinvent itself with new leadership and a
             new direction. My role was to provide vision, strategy, and
-            experience in technology.
+            experience in technology. Ultimiately culminating in the creation of
+            a new arm of the business with new products and services based on a
+            3 year strategy.
           </p>
         </div>
         <div class="experience-content">
