refactor: improve CSS maintainability and remove dead code
- Add explicit CSS rule for .experience-company class to improve code clarity
- Remove unused .experience selector from mobile media query
- Enhances stylesheet maintainability without changing visual appearance

--- a/index.html
+++ b/index.html
@@ -324,77 +324,35 @@
         <h3><span class="dot">.</span>Skills</h3>
       </div>
       <div class="skills-content" id="skills">
-        <!-- Architecture & Design -->
-        <h5 class="skill">
-          Architecture &#38; Design
-          <span>98%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="98"></meter>
+        <div class="skill-card">
+          <h5>Leadership</h5>
         </div>
-        <!-- Leadership -->
-        <h5 class="skill">
-          Leadership
-          <span>95%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="93"></meter>
+        <div class="skill-card">
+          <h5>Empathy</h5>
         </div>
-        <!-- Technology Strategy -->
-        <h5 class="skill">
-          Technology Strategy
-          <span>95%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="95"></meter>
+        <div class="skill-card">
+          <h5>Technology Strategy</h5>
         </div>
-        <!-- Cloud -->
-        <h5 class="skill">
-          Cloud
-          <span>98%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="98"></meter>
+        <div class="skill-card">
+          <h5>Artificial Intelligence (AI)</h5>
         </div>
-        <!-- DevSecOps/Platform Engineering -->
-        <h5 class="skill">
-          DevSecOps/Platform Engineering
-          <span>94%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="88"></meter>
+        <div class="skill-card">
+          <h5>Architecture &#38; Design</h5>
         </div>
-
-        <h5 class="skill">
-          Cybersecurity
-          <span>85%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="85"></meter>
+        <div class="skill-card">
+          <h5>Cloud</h5>
         </div>
-        <!-- Networking -->
-        <h5 class="skill">
-          Networking
-          <span>95%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="95"></meter>
+        <div class="skill-card">
+          <h5>Cybersecurity</h5>
         </div>
-        <!-- Virtualization -->
-        <h5 class="skill">
-          Virtualization
-          <span>95%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="95"></meter>
+        <div class="skill-card">
+          <h5>DevSecOps/Platform Engineering</h5>
         </div>
-        <!-- Programming -->
-        <h5 class="skill">
-          Programming
-          <span>78%</span>
-        </h5>
-        <div class="meter">
-          <meter min="0" max="100" value="70"></meter>
+        <div class="skill-card">
+          <h5>Networking</h5>
+        </div>
+        <div class="skill-card">
+          <h5>Programming</h5>
         </div>
       </div>
     </div>
@@ -487,7 +445,7 @@
     <!-- Footer Copyright-->
     <footer>
       <div class="footer">
-        <p><i class="fa-regular fa-copyright"></i> 2023 | Zachary Hill</p>
+        <p><i class="fa-regular fa-copyright"></i> 2025 | Zachary Hill</p>
       </div>
     </footer>
   </body>
