Updated education section to use a categorization.

--- a/index.html
+++ b/index.html
@@ -365,24 +365,74 @@
         <h3><span class="dot">.</span>Education</h3>
       </div>
       <div class="education-content" id="education">
-        <ul>
-          <li>Stagen Leadership Program | 2025</li>
-          <li>
-            AWS Solutions Architect - Professional | 2025 &#38; 2022 &#38; 2019
-          </li>
-          <li>
-            AWS Solutions Architect - Associate | 2025 &#38; 2022 &#38; 2019
-          </li>
-          <li>Conscious Leadership Program | 2023 - 2025</li>
-          <li>Next Generation Leaders Program | 2016 - 2017</li>
-          <li>
-            VMware Certified Professional - Data Center Virtualization | 2009
-            &#38; 2013
-          </li>
-          <li>CCNP (previously held) | 2012</li>
-          <li>CCNA (previously held) | 2010</li>
-          <li>DeVry University | 2005 - 2006</li>
-        </ul>
+        <!-- Leadership Programs Category -->
+        <div class="education-category">
+          <h4 class="education-category-title">
+            <i class="education-category-icon fa-solid fa-person-hiking"></i>
+            Leadership Programs
+          </h4>
+          <div class="education-item">
+            <p class="education-item-title">Stagen Leadership Program</p>
+            <p class="education-item-issuer">Stagen</p>
+            <p class="education-item-year">2025</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">Conscious Leadership Program</p>
+            <p class="education-item-issuer">The Conscious Leadership Group</p>
+            <p class="education-item-year">2023 - 2025</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">Next Generation Leaders Program</p>
+            <p class="education-item-issuer">Next Generation Leaders</p>
+            <p class="education-item-year">2016 - 2017</p>
+          </div>
+        </div>
+
+        <!-- Professional Certifications Category -->
+        <div class="education-category">
+          <h4 class="education-category-title">
+            <i class="education-category-icon fa-solid fa-certificate"></i>
+            Professional Certifications
+          </h4>
+          <div class="education-item">
+            <p class="education-item-title">AWS Solutions Architect - Professional</p>
+            <p class="education-item-issuer">Amazon Web Services</p>
+            <p class="education-item-year">2025 &#38; 2022 &#38; 2019</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">AWS Solutions Architect - Associate</p>
+            <p class="education-item-issuer">Amazon Web Services</p>
+            <p class="education-item-year">2025 &#38; 2022 &#38; 2019</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">VMware Certified Professional - Data Center Virtualization</p>
+            <p class="education-item-issuer">VMware</p>
+            <p class="education-item-year">2009 &#38; 2013</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">CCNP (previously held)</p>
+            <p class="education-item-issuer">Cisco</p>
+            <p class="education-item-year">2012</p>
+          </div>
+          <div class="education-item">
+            <p class="education-item-title">CCNA (previously held)</p>
+            <p class="education-item-issuer">Cisco</p>
+            <p class="education-item-year">2010</p>
+          </div>
+        </div>
+
+        <!-- Formal Education Category -->
+        <div class="education-category">
+          <h4 class="education-category-title">
+            <i class="education-category-icon fa-solid fa-graduation-cap"></i>
+            Formal Education
+          </h4>
+          <div class="education-item">
+            <p class="education-item-title">Bachelor of Science in Computer Information Systems</p>
+            <p class="education-item-issuer">DeVry University</p>
+            <p class="education-item-year">2005 - 2006</p>
+          </div>
+        </div>
       </div>
     </div>
 
