Enhancements to the skills section to better match

--- a/index.html
+++ b/index.html
@@ -324,35 +324,93 @@
         <h3><span class="dot">.</span>Skills</h3>
       </div>
       <div class="skills-content" id="skills">
-        <div class="skill-card">
-          <h5>Leadership</h5>
+        <!-- Leadership & Management Category -->
+        <div class="skill-category">
+          <h4 class="skill-category-title">
+            <i class="skill-category-icon fa-solid fa-people-line"></i>
+            Leadership & Management
+          </h4>
+          <div class="skill-card">
+            <h5>Culture</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Leadership</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Mentorship</h5>
+          </div>
         </div>
-        <div class="skill-card">
-          <h5>Empathy</h5>
+
+        <!-- Strategy & Vision Category -->
+        <div class="skill-category">
+          <h4 class="skill-category-title">
+            <i class="skill-category-icon fa-solid fa-compass"></i>
+            Strategy & Vision
+          </h4>
+          <div class="skill-card">
+            <h5>Architecture &#38; Design</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Innovation</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Technology Strategy</h5>
+          </div>
         </div>
-        <div class="skill-card">
-          <h5>Technology Strategy</h5>
+
+        <!-- Technology Category -->
+        <div class="skill-category">
+          <h4 class="skill-category-title">
+            <i class="skill-category-icon fa-solid fa-layer-group"></i>
+            Technology
+          </h4>
+          
+          <div class="skill-card">
+            <h5>Artificial Intelligence (AI)</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Cloud</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Data</h5>
+          </div>
+          <div class="skill-card">
+            <h5>DevSecOps/Platform Engineering</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Networking</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Programming</h5>
+          </div>
         </div>
-        <div class="skill-card">
-          <h5>Artificial Intelligence (AI)</h5>
+
+        <!-- Security & Operations Category -->
+        <div class="skill-category">
+          <h4 class="skill-category-title">
+            <i class="skill-category-icon fa-solid fa-shield"></i>
+            Security & Operations
+          </h4>
+          <div class="skill-card">
+            <h5>Cybersecurity</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Incident Response</h5>
+          </div>
+          <div class="skill-card">
+            <h5>NIST Cybersecurity Framework</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Risk Management</h5>
+          </div>
+          <div class="skill-card">
+            <h5>Vulnerability Management</h5>
+          </div>
         </div>
-        <div class="skill-card">
-          <h5>Architecture &#38; Design</h5>
-        </div>
-        <div class="skill-card">
-          <h5>Cloud</h5>
-        </div>
-        <div class="skill-card">
-          <h5>Cybersecurity</h5>
-        </div>
-        <div class="skill-card">
-          <h5>DevSecOps/Platform Engineering</h5>
-        </div>
-        <div class="skill-card">
-          <h5>Networking</h5>
-        </div>
-        <div class="skill-card">
-          <h5>Programming</h5>
+
+        <!-- Infrastructure Category -->
+      </div>
+    </div>
         </div>
       </div>
     </div>
@@ -395,17 +453,23 @@
             Professional Certifications
           </h4>
           <div class="education-item">
-            <p class="education-item-title">AWS Solutions Architect - Professional</p>
+            <p class="education-item-title">
+              AWS Solutions Architect - Professional
+            </p>
             <p class="education-item-issuer">Amazon Web Services</p>
             <p class="education-item-year">2025 &#38; 2022 &#38; 2019</p>
           </div>
           <div class="education-item">
-            <p class="education-item-title">AWS Solutions Architect - Associate</p>
+            <p class="education-item-title">
+              AWS Solutions Architect - Associate
+            </p>
             <p class="education-item-issuer">Amazon Web Services</p>
             <p class="education-item-year">2025 &#38; 2022 &#38; 2019</p>
           </div>
           <div class="education-item">
-            <p class="education-item-title">VMware Certified Professional - Data Center Virtualization</p>
+            <p class="education-item-title">
+              VMware Certified Professional - Data Center Virtualization
+            </p>
             <p class="education-item-issuer">VMware</p>
             <p class="education-item-year">2009 &#38; 2013</p>
           </div>
@@ -428,7 +492,9 @@
             Formal Education
           </h4>
           <div class="education-item">
-            <p class="education-item-title">Bachelor of Science in Computer Information Systems</p>
+            <p class="education-item-title">
+              Bachelor of Science in Computer Information Systems
+            </p>
             <p class="education-item-issuer">DeVry University</p>
             <p class="education-item-year">2005 - 2006</p>
           </div>
