--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="skill-category">
           <h4 class="skill-category-title">
             <i class="skill-category-icon fa-solid fa-people-line"></i>
-            Leadership & Management
+            Leadership &amp; Management
           </h4>
           <div class="skill-card">
             <h5>Culture</h5>
@@ -345,7 +345,7 @@
         <div class="skill-category">
           <h4 class="skill-category-title">
             <i class="skill-category-icon fa-solid fa-compass"></i>
-            Strategy & Vision
+            Strategy &amp; Vision
           </h4>
           <div class="skill-card">
             <h5>Architecture &#38; Design</h5>
@@ -389,7 +389,7 @@
         <div class="skill-category">
           <h4 class="skill-category-title">
             <i class="skill-category-icon fa-solid fa-shield"></i>
-            Security & Operations
+            Security &amp; Operations
           </h4>
           <div class="skill-card">
             <h5>Cybersecurity</h5>
@@ -527,7 +527,7 @@
             alt="Zachary Hill embarking on a fishing trip. In the background is an Airstream and bush planes in a morning sunrise."
           />
           <div class="masonry-overlay">
-            <div class="masonry-title">Bush Planes & Fishing</div>
+            <div class="masonry-title">Bush Planes &amp; Fishing</div>
           </div>
         </div>
 
@@ -614,7 +614,7 @@
     <div class="lightbox" id="lightbox">
       <button class="lightbox-close" onclick="closeLightbox()">&times;</button>
       <div class="lightbox-content">
-        <img class="lightbox-image" id="lightbox-image" src="" alt="" />
+        <img class="lightbox-image" id="lightbox-image" src="#" alt="" />
         <div class="lightbox-info">
           <div class="lightbox-year" id="lightbox-year"></div>
           <h2 class="lightbox-title" id="lightbox-title"></h2>
